arkts_static_test/06_Contexts_Conversions/ets_cases/6.3.2_char_Conversions_for_Relational_and_Equality_Operands/compile-fail/CON_06_03_02_017_FAIL_CHAR_STRING_EQUALITY.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id CON_06_03_02_017_FAIL_CHAR_STRING_EQUALITY
 * @expect compile-fail
 * @section 6.3.2
 * @design char <= string: string 非数值类型，char widening 不适用，应编译失败
 * @note 反向用例：非数值类型作另一操作数时 char 转换不适用
 */
function testCharStringEqualityFail(): void {
  let c: char = c'A'
  let s: string = "A"
  let r: boolean = c <= s
}
